# Compiler

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  compiler.l  compiler.y  input  notes.md  pretty_code.sh  report.md
src/: Assembly.c  Assembly.h  Error.c  Error.h  Functions.c  Functions.h  Interpreter.c  Symbols.c  Symbols.h  compiler.l  compiler.y  lex.yy.h  main.c  syntax.c  syntax.h
test/: checker.sh  input  input.c
test/impostor_C/: 00_missing_semicolon.c  02_instructions_outside_function.c  02_invalid_const_qualifier.c  03_void_variable.c  04_uknown_variable.c  05_invalid_const.c  06_write_on_const.c  07_uninitialized_const.c  08_initializing_const.c  10_invalid_function_signature.c  11_invalid_function_signature.c  12_invalid_function_signature.c  13_invalid_function_signature.c  14_invalid_function_signature.c  15_invalid_function_signature.c  20_function_call_unterminated.c  21_invalid_function_call.c  30_invalid_while_statement.c  31_invalid_declaration.c  40_missing_main.c  41_call_missing_function.c  42_call_missing_function_but_def.c
test/legitime_C/: 02_main_with_arguments.c  03_all_types.c  04_comments.c  05_spaces_and_names.c  06_global_variables.c  07_const_variables.c  10_multiple_signatures.c  11_multiple_functions.c  20_arithmetic.c  21_if_statement.c  22_while_statement.c  30_global_test.c  40_function_call.c
